# TamiAlQuida.github.io

./: .gitignore  bme280_data.csv  bme280_data_pico.csv  bme280data.csv  index.html  requirements.txt  stock_values.csv
.cache/clangd/index/: blink.cpp.DA3A7144DDFE817E.idx
.config/: bindings.conf  hyprland.conf  hyprland.conf.2  looknfeel.conf  tiling-v2.conf
C++/: classes  classes.cpp  hello_world  hello_world.cpp  peta.csv
C++/Green_house/src/: green_house.cpp
C++/QTApp/: CMakeLists.txt  CMakeLists.txt.user.c8706fe  bolan.cpp  bolan.h  bolan.py  calories  calories.cpp  calories.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  output.txt  shared_memory.h  stock_analysis.py  stock_values.csv  test  test.cpp  test.py  test2  test2.cpp
C++/QTApp/build-QTApp-Desktop-Release/: CMakeCache.txt.prev  Makefile  QTApp  cmake_install.cmake  output.txt  stock_values.csv
C++/QTAppQmake/: QTAppQmake.pro  bolan  bolan.cpp  bolan.h  bolan.py  classes.h  get_value.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  output.txt
C++/build-QTApp-Desktop-Debug/: CMakeCache.txt
C++/build-QTAppQmake-Android-Release/.qtc_clangd/: compile_commands.json
C++/gyro/: CMakeLists.txt  mpu_6050.cpp
C++/super_mario/: sendNumbersToPico  sendNumbersToPico.cpp  test
C++/various/: CMakeLists.txt  game  game.cpp  sendNumbersToPicoController  sendNumbersToPicoController.cpp  simulate_key  super_mario_adventure.cpp  super_mario_adventure.h  super_mario_adventure_class.h  super_mario_adventure_variables_includes.h  test  test.cpp  test2  test2.cpp  test_pointers.cpp
NRF_Pico_Arduino-main/Pico/: CMakeLists.txt
NRF_Pico_Arduino-main/Pico/NRF_Receiver/: CMakeLists.txt
NRF_Pico_Arduino-main/Pico/NRF_Receiver/src/: main copy.cpp  main.cpp
NRF_Pico_Arduino-main/Pico/NRF_Transmitter/: CMakeLists.txt
NRF_Pico_Arduino-main/Pico/NRF_Transmitter/src/: main.cpp  sendNumbersToPicoController  sendNumbersToPicoController.cpp
NRF_Pico_Arduino-main/Pico/NRF_controller_transmitter/: CMakeLists.txt
NRF_Pico_Arduino-main/Pico/NRF_controller_transmitter/src/: main.cpp  receiver.cpp
NRF_Pico_Arduino-main/Pico/controller/: sendNumbersToPicoController  sendNumbersToPicoController.cpp
NRF_Pico_Arduino-main/Pico/controller_transmitter/src/: main copy 2.cpp  main copy.cpp  main.cpp  sendNumbersToPicoController.cpp
projects/QT/QTApp/: CMakeLists.txt  bolan  bolan.h  bolan.py  bolan_alt.py  calories.cpp  classes.cpp  mainwindow.cpp  test2.cpp
projects/QT/QTAppQmake/: .gitignore  bolan.h  mainwindow.cpp  mainwindow.ui  style.xml
projects/green_house/pico/: CMakeLists.txt
projects/green_house/pico w/: CMakeLists.txt
projects/green_house/pico/clock/: clock.h  sunrise.csv  sunset_sunrise.py  sunset_sunrise.txt  time  time.cpp
projects/green_house/pico/display/: CMakeLists.txt  i2c_oled_1306.c
projects/green_house/pico/display/src/: i2c_oled_1306.cpp  i2c_oled_1306.h  ssd1306.h
projects/green_house/pico/src/: functions.h  main.cpp  main.h
projects/green_house/picoW/: .clangd  CMakeLists.txt  lwipopts.h
projects/green_house/picoW/src/: main.cpp
projects/green_house/picoW/web/: bridge_server.cpp  bridge_server.py  bridge_server.ts  index.html  script.js  script.ts  styles.css
projects/green_house/picoW/web/NextJS/test-app/: package-lock.json
projects/green_house/picoW/web/NextJS/test-app/app/: layout.tsx  page.tsx
projects/gyro/: mpu_6050.cpp  mpu_6050_MAVlink.cpp  mpu_6050_original.cpp  simulation.py
projects/old_historic/: bme280_sensor.py  bme280_sensor.service  bme280_sensor.sh  bme280_sensor_data_plot.py  bolan.py  cheap_vs_expensive_house copy.py  controller.cpp  controller.py  cpu_temp.py  plot_bme280_data.py  pygame_test.py  stock_values.csv  stock_values_109.csv  test_2.py
projects/old_historic/raspberrypico/: client_side.js  identify_key_function.py  kladd.csv  server_req_webbrowser.py  server_weather_plot.py  server_weather_station.py  test.py
projects/old_historic/raspberrypico/C++/: CMakeLists.txt  blink.cpp
projects/old_historic/tensorflow/: tensorflow_test.py  tensorflow_test_2.py
projects/picamera/: camera_test.py  camera_test3.py
projects/rpicam/: MEDIAMTX.txt  capture.cpp  opencv  opencv.cpp  opencv2.cpp  opencv3.cpp  rpicam.cpp  rpicam_still.cpp  rpicam_vid.cpp
projects/rpicam/mediamtx/: index.html  mediamtx.service  mediamtx.sh  mediamtx.yml  style.css
projects/rpicam/pycamera/: camera_test2.py  camera_test3_connect.py  camera_test4.py
projects/super_mario/: CMakeLists.txt  CMakeLists_test.txt  sendNumbersToPicoController  sendNumbersToPicoController.cpp  super_mario_adventure.cpp  super_mario_adventure_class.h  super_mario_adventure_variables_includes.h  test.py  test_pointers
projects/test_website/: main.html
projects/test_website/scripts/: server_req_webbrowser.py
projects/test_website/styles/: style.css
scripts/: bme280_data.csv  bme280_sensor.py  bme280_sensor.service  bme280_sensor.sh  bme280_sensor_data_plot.py  bme280data.csv  camera_test.py  camera_test2.py  cheap_vs_expensive_house copy.py  cheap_vs_expensive_house.py  controller.cpp  controller.py  cpu_temp.csv  dc_motor_drive_L298N.py  foraldradagar.py  gpiocontroller.py  gpiocontroller_test.py  main.js  plot_bme280_data.py  pygame_robot.py  pythonscript.py  rc_car.py  test.py  test_2.py
scripts/Old crap/Instagram_profile/: main.py
scripts/Old crap/pythonProject/: Classes.py  Exceptions.py  File input and output.py  Financial indepenence.py  Functions.py  Indexing and slicing.py  (+22 more)
scripts/raspberrypico/: bme280_data_pico.csv  client_side.js  client_side2.js  index2.html  kladd.csv  main.py  pico_weather_station.py  raspberry_pi_pico.py  server_req_controller.py  server_req_webbrowser.py  server_side.py  server_weather_plot.py  server_weather_station.py  test.py
scripts/raspberrypizero/: zero_weather_station.py
scripts/tensorflow/: tensorflow_test_2.py
scripts/testfiles/: client_side.js  client_side2.js  index.html  index2.html  server_side.py  server_side2.py  server_side3.py  server_side4.py  server_side5.py  style.css  test.py  test2.py  test_function.py
(+143 files in other folders)
